# bookie

./: .env.preview.example  .env.production.example  .gitignore  README.md  firebase.json  package.json  tsconfig.json
apps/client/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/client/src/: index.css  main.tsx  routeTree.gen.ts
apps/client/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  site-header.tsx
apps/client/src/components/layout/: app-layout.tsx  auth-guard.tsx
apps/client/src/components/scanner/: barcode-scanner.tsx  book-scanner.tsx  index.ts  student-scanner.tsx
apps/client/src/hooks/: use-auth.ts  use-role.ts
apps/client/src/lib/: accessibility.ts  export-utils.ts  i18n.ts  isbn-lookup.ts
apps/client/src/routes/: __root.tsx  catalog.tsx  circulation.tsx  dashboard.tsx  help.tsx  index.tsx  init.tsx  inventory.tsx  login.tsx  profile.tsx  reports.tsx  setup.tsx  students.tsx
apps/client/src/routes/settings/: import.tsx  index.tsx  members.tsx
apps/kiosk/: index.html  package.json  tsconfig.json  vite.config.ts
apps/kiosk/src/: App.tsx  index.css
apps/kiosk/src-tauri/: Cargo.toml  tauri.conf.json
apps/kiosk/src-tauri/icons/: icon.icns
apps/server/: package.json  tsconfig.json
convex/: auth.config.ts  books.ts  crons.ts  holidays.ts  http.ts  kiosk.ts  librarians.ts  reports.ts  schema.ts  settings.ts  students.ts  transactions.ts
convex/_generated/: api.d.ts
scripts/: deploy.sh
