[package]
name = "bookie-kiosk"
version = "1.0.0"
description = "Student self-service library kiosk"
authors = ["Bookie"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
